My Movie List app is up

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,18 @@
     color: goldenrod;
     min-height: 100vh;
 }
+.card-1 i{
+  
+   
+    cursor: pointer;
+    display: none;
+    transition: all ease 0.5s;
+}
+
+.card-1:hover i{
+    display: inline-block;
+    
+    
+    zoom: 150%;
+    color: red;
+}
